Docs: Consolidate documentation into README, DEVELOPMENT, and TROUBLESHOOTING